<resources>
    <string name="app_name">Leaderboard</string>
    <string name="leader_title">LeaderBoard</string>
    <string name="submit">Submit</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="github_link">Project on GITHUB [Link]</string>
    <string name="dialog_text">Are You Sure ?</string>
    <string name="yes">Yes</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="no_success">Submission not successful</string>
</resources>
